syntax = "proto3";

package auth.v1;

service AuthService {
  // CreateAPIKey creates a new API key for the authenticated user
  rpc CreateAPIKey(CreateAPIKeyRequest) returns (CreateAPIKeyResponse) {}
}

message CreateAPIKeyRequest {
  string name = 1;
  // expiresIn is the expiration time in seconds from now
  int64 expiresIn = 2;
}

message CreateAPIKeyResponse {
  string apiKeyId = 1;
  string apiKey = 2;
  string name = 3;
  string createdAt = 4;
  string expiresAt = 5;
}
