syntax = "proto3";

package payment.v1;

service PaymentService {
  // CreateCheckoutLink creates a checkout link for the given user
  rpc CreateCheckoutLink(CreateCheckoutLinkRequest) returns (CreateCheckoutLinkResponse) {}
}

message CreateCheckoutLinkRequest {
  string userId = 1;
}

message CreateCheckoutLinkResponse {
  string checkoutLink = 1;
}
